external-crates/move/crates/move-compiler/tests/move_2024/expansion/multiple_same_error_codes.move
module 0x42::m {
    #[error(code = 0)]
    const Bar: bool = true;

    #[error(code = 0)]
    const Bar2: bool = true;

    #[error(code = 0)]
    const Bar3: bool = true;
}
